# docs/client/swagger.yaml
@@ -4,7 +4,7 @@ info:
   description: A REST interface for state queries, legacy transactions
   version: 1.0.0
 paths:
-  /botany/auction/auctions:
+  /ununifi/auction/auctions:
     get:
       operationId: AuctionAll
       responses:
@@ -455,7 +455,7 @@ paths:
           type: boolean
       tags:
         - Query
-  /botany/auction/auctions/{id}:
+  /ununifi/auction/auctions/{id}:
     get:
       summary: 'this line is used by starport scaffolding # 2'
       operationId: Auction
@@ -833,7 +833,7 @@ paths:
           format: uint64
       tags:
         - Query
-  /botany/auction/params:
+  /ununifi/auction/params:
     get:
       operationId: AuctionParams
       responses:
@@ -1046,7 +1046,7 @@ paths:
                         }
       tags:
         - Query
-  /botany/cdp/accounts:
+  /ununifi/cdp/accounts:
     get:
       operationId: AccountAll
       responses:
@@ -1423,7 +1423,7 @@ paths:
                         }
       tags:
         - Query
-  /botany/cdp/cdps:
+  /ununifi/cdp/cdps:
     get:
       operationId: CdpAll
       responses:
@@ -1782,7 +1782,7 @@ paths:
           type: boolean
       tags:
         - Query
-  /botany/cdp/cdps/owners/{owner}/collateral-types/{collateral_type}/cdp:
+  /ununifi/cdp/cdps/owners/{owner}/collateral-types/{collateral_type}/cdp:
     get:
       summary: 'this line is used by starport scaffolding # 2'
       operationId: Cdp
@@ -2075,7 +2075,7 @@ paths:
           type: string
       tags:
         - Query
-  /botany/cdp/deposits/owners/{owner}/collateral-types/{collateral_type}:
+  /ununifi/cdp/deposits/owners/{owner}/collateral-types/{collateral_type}:
     get:
       operationId: DepositAll
       responses:
@@ -2309,7 +2309,7 @@ paths:
           type: string
       tags:
         - Query
-  /botany/cdp/params:
+  /ununifi/cdp/params:
     get:
       operationId: CdpParams
       responses:
@@ -2594,7 +2594,7 @@ paths:
                         }
       tags:
         - Query
-  /botany/incentive/params:
+  /ununifi/incentive/params:
     get:
       operationId: IncentiveParams
       responses:
@@ -2676,7 +2676,7 @@ paths:
                       format: byte
       tags:
         - Query
-  /botany/botanydist/balances:
+  /ununifi/ununifidist/balances:
     get:
       summary: 'this line is used by starport scaffolding # 2'
       operationId: Balances
@@ -2727,7 +2727,7 @@ paths:
                       format: byte
       tags:
         - Query
-  /botany/botanydist/params:
+  /ununifi/ununifidist/params:
     get:
       operationId: BotanydistParams
       responses:
@@ -2778,7 +2778,7 @@ paths:
                       format: byte
       tags:
         - Query
-  /botany/pricefeed/markets:
+  /ununifi/pricefeed/markets:
     get:
       summary: 'this line is used by starport scaffolding # 2'
       operationId: MarketAll
@@ -2903,7 +2903,7 @@ paths:
           type: boolean
       tags:
         - Query
-  /botany/pricefeed/markets/{market_id}/oracles:
+  /ununifi/pricefeed/markets/{market_id}/oracles:
     get:
       operationId: OracleAll
       responses:
@@ -3018,7 +3018,7 @@ paths:
           type: boolean
       tags:
         - Query
-  /botany/pricefeed/markets/{market_id}/price:
+  /ununifi/pricefeed/markets/{market_id}/price:
     get:
       operationId: Price
       responses:
@@ -3063,7 +3063,7 @@ paths:
           type: string
       tags:
         - Query
-  /botany/pricefeed/markets/{market_id}/raw_prices:
+  /ununifi/pricefeed/markets/{market_id}/raw_prices:
     get:
       operationId: RawPriceAll
       responses:
@@ -3188,7 +3188,7 @@ paths:
           type: boolean
       tags:
         - Query
-  /botany/pricefeed/params:
+  /ununifi/pricefeed/params:
     get:
       operationId: PricefeedParams
       responses:
@@ -3241,7 +3241,7 @@ paths:
                       format: byte
       tags:
         - Query
-  /botany/pricefeed/prices:
+  /ununifi/pricefeed/prices:
     get:
       operationId: PriceAll
       responses:
@@ -3358,7 +3358,7 @@ paths:
       tags:
         - Query
 definitions:
-  botany.auction.Params:
+  ununifi.auction.Params:
     type: object
     properties:
       max_auction_duration:
@@ -3371,7 +3371,7 @@ definitions:
         type: string
       increment_collateral:
         type: string
-  botany.auction.QueryAllAuctionResponse:
+  ununifi.auction.QueryAllAuctionResponse:
     type: object
     properties:
       auctions:
@@ -3563,7 +3563,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.auction.QueryGetAuctionResponse:
+  ununifi.auction.QueryGetAuctionResponse:
     type: object
     properties:
       auction:
@@ -3725,7 +3725,7 @@ definitions:
                 "@type": "type.googleapis.com/google.protobuf.Duration",
                 "value": "1.212s"
               }
-  botany.auction.QueryParamsResponse:
+  ununifi.auction.QueryParamsResponse:
     type: object
     properties:
       params:
@@ -4138,7 +4138,7 @@ definitions:
                   "@type": "type.googleapis.com/google.protobuf.Duration",
                   "value": "1.212s"
                 }
-  botany.cdp.AugmentedCdp:
+  ununifi.cdp.AugmentedCdp:
     type: object
     properties:
       cdp:
@@ -4215,7 +4215,7 @@ definitions:
           signatures required by gogoproto.
       collateralization_ratio:
         type: string
-  botany.cdp.Cdp:
+  ununifi.cdp.Cdp:
     type: object
     properties:
       id:
@@ -4266,7 +4266,7 @@ definitions:
         format: date-time
       interest_factor:
         type: string
-  botany.cdp.CollateralParam:
+  ununifi.cdp.CollateralParam:
     type: object
     properties:
       denom:
@@ -4306,7 +4306,7 @@ definitions:
         type: string
       conversion_factor:
         type: string
-  botany.cdp.DebtParam:
+  ununifi.cdp.DebtParam:
     type: object
     properties:
       denom:
@@ -4317,7 +4317,7 @@ definitions:
         type: string
       debt_floor:
         type: string
-  botany.cdp.Deposit:
+  ununifi.cdp.Deposit:
     type: object
     properties:
       cdp_id:
@@ -4337,7 +4337,7 @@ definitions:
 
           NOTE: The amount field is an Int which implements the custom method
           signatures required by gogoproto.
-  botany.cdp.Params:
+  ununifi.cdp.Params:
     type: object
     properties:
       collateral_params:
@@ -4418,7 +4418,7 @@ definitions:
         type: string
       circuit_breaker:
         type: boolean
-  botany.cdp.QueryAllAccountResponse:
+  ununifi.cdp.QueryAllAccountResponse:
     type: object
     properties:
       accounts:
@@ -4585,7 +4585,7 @@ definitions:
                   "@type": "type.googleapis.com/google.protobuf.Duration",
                   "value": "1.212s"
                 }
-  botany.cdp.QueryAllCdpResponse:
+  ununifi.cdp.QueryAllCdpResponse:
     type: object
     properties:
       cdp:
@@ -4695,7 +4695,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.cdp.QueryAllDepositResponse:
+  ununifi.cdp.QueryAllDepositResponse:
     type: object
     properties:
       deposits:
@@ -4723,7 +4723,7 @@ definitions:
                 method
 
                 signatures required by gogoproto.
-  botany.cdp.QueryGetCdpResponse:
+  ununifi.cdp.QueryGetCdpResponse:
     type: object
     properties:
       cdp:
@@ -4806,7 +4806,7 @@ definitions:
               signatures required by gogoproto.
           collateralization_ratio:
             type: string
-  botany.cdp.QueryParamsResponse:
+  ununifi.cdp.QueryParamsResponse:
     type: object
     properties:
       params:
@@ -4905,7 +4905,7 @@ definitions:
 
       NOTE: The amount field is an Int which implements the custom method
       signatures required by gogoproto.
-  botany.incentive.Multiplier:
+  ununifi.incentive.Multiplier:
     type: object
     properties:
       name:
@@ -4915,7 +4915,7 @@ definitions:
         format: int64
       factor:
         type: string
-  botany.incentive.Params:
+  ununifi.incentive.Params:
     type: object
     properties:
       cdp_minting_reward_periods:
@@ -4963,7 +4963,7 @@ definitions:
       claim_end:
         type: string
         format: date-time
-  botany.incentive.QueryParamsResponse:
+  ununifi.incentive.QueryParamsResponse:
     type: object
     properties:
       params:
@@ -5014,7 +5014,7 @@ definitions:
           claim_end:
             type: string
             format: date-time
-  botany.incentive.RewardPeriod:
+  ununifi.incentive.RewardPeriod:
     type: object
     properties:
       active:
@@ -5039,7 +5039,7 @@ definitions:
 
           NOTE: The amount field is an Int which implements the custom method
           signatures required by gogoproto.
-  botany.botanydist.Params:
+  ununifi.ununifidist.Params:
     type: object
     properties:
       active:
@@ -5057,7 +5057,7 @@ definitions:
               format: date-time
             inflation:
               type: string
-  botany.botanydist.Period:
+  ununifi.ununifidist.Period:
     type: object
     properties:
       start:
@@ -5068,7 +5068,7 @@ definitions:
         format: date-time
       inflation:
         type: string
-  botany.botanydist.QueryGetBalancesResponse:
+  ununifi.ununifidist.QueryGetBalancesResponse:
     type: object
     properties:
       balances:
@@ -5085,7 +5085,7 @@ definitions:
 
             NOTE: The amount field is an Int which implements the custom method
             signatures required by gogoproto.
-  botany.botanydist.QueryParamsResponse:
+  ununifi.ununifidist.QueryParamsResponse:
     type: object
     properties:
       params:
@@ -5106,14 +5106,14 @@ definitions:
                   format: date-time
                 inflation:
                   type: string
-  botany.pricefeed.CurrentPrice:
+  ununifi.pricefeed.CurrentPrice:
     type: object
     properties:
       market_id:
         type: string
       price:
         type: string
-  botany.pricefeed.Market:
+  ununifi.pricefeed.Market:
     type: object
     properties:
       market_id:
@@ -5128,7 +5128,7 @@ definitions:
           type: string
       active:
         type: boolean
-  botany.pricefeed.Params:
+  ununifi.pricefeed.Params:
     type: object
     properties:
       markets:
@@ -5148,7 +5148,7 @@ definitions:
                 type: string
             active:
               type: boolean
-  botany.pricefeed.PostedPrice:
+  ununifi.pricefeed.PostedPrice:
     type: object
     properties:
       market_id:
@@ -5160,7 +5160,7 @@ definitions:
       expiry:
         type: string
         format: date-time
-  botany.pricefeed.QueryAllMarketResponse:
+  ununifi.pricefeed.QueryAllMarketResponse:
     type: object
     properties:
       markets:
@@ -5205,7 +5205,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.pricefeed.QueryAllOracleResponse:
+  ununifi.pricefeed.QueryAllOracleResponse:
     type: object
     properties:
       oracles:
@@ -5237,7 +5237,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.pricefeed.QueryAllPriceResponse:
+  ununifi.pricefeed.QueryAllPriceResponse:
     type: object
     properties:
       prices:
@@ -5274,7 +5274,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.pricefeed.QueryAllRawPriceResponse:
+  ununifi.pricefeed.QueryAllRawPriceResponse:
     type: object
     properties:
       prices:
@@ -5316,7 +5316,7 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  botany.pricefeed.QueryGetPriceResponse:
+  ununifi.pricefeed.QueryGetPriceResponse:
     type: object
     properties:
       price:
@@ -5326,7 +5326,7 @@ definitions:
             type: string
           price:
             type: string
-  botany.pricefeed.QueryParamsResponse:
+  ununifi.pricefeed.QueryParamsResponse:
     type: object
     properties:
       params:
