# x/botanydist/types/query.pb.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-gogo. DO NOT EDIT.
-// source: botanydist/query.proto
+// source: ununifidist/query.proto
 
 package types
 
@@ -192,13 +192,13 @@ func (m *QueryGetBalancesResponse) GetBalances() []types.Coin {
 }
 
 func init() {
-	proto.RegisterType((*QueryParamsRequest)(nil), "botany.botanydist.QueryParamsRequest")
-	proto.RegisterType((*QueryParamsResponse)(nil), "botany.botanydist.QueryParamsResponse")
-	proto.RegisterType((*QueryGetBalancesRequest)(nil), "botany.botanydist.QueryGetBalancesRequest")
-	proto.RegisterType((*QueryGetBalancesResponse)(nil), "botany.botanydist.QueryGetBalancesResponse")
+	proto.RegisterType((*QueryParamsRequest)(nil), "ununifi.ununifidist.QueryParamsRequest")
+	proto.RegisterType((*QueryParamsResponse)(nil), "ununifi.ununifidist.QueryParamsResponse")
+	proto.RegisterType((*QueryGetBalancesRequest)(nil), "ununifi.ununifidist.QueryGetBalancesRequest")
+	proto.RegisterType((*QueryGetBalancesResponse)(nil), "ununifi.ununifidist.QueryGetBalancesResponse")
 }
 
-func init() { proto.RegisterFile("botanydist/query.proto", fileDescriptor_7b6dfb6c53a41d18) }
+func init() { proto.RegisterFile("ununifidist/query.proto", fileDescriptor_7b6dfb6c53a41d18) }
 
 var fileDescriptor_7b6dfb6c53a41d18 = []byte{
 	// 393 bytes of a gzipped FileDescriptorProto
@@ -256,7 +256,7 @@ func NewQueryClient(cc grpc1.ClientConn) QueryClient {
 
 func (c *queryClient) Params(ctx context.Context, in *QueryParamsRequest, opts ...grpc.CallOption) (*QueryParamsResponse, error) {
 	out := new(QueryParamsResponse)
-	err := c.cc.Invoke(ctx, "/botany.botanydist.Query/Params", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/ununifi.ununifidist.Query/Params", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -265,7 +265,7 @@ func (c *queryClient) Params(ctx context.Context, in *QueryParamsRequest, opts .
 
 func (c *queryClient) Balances(ctx context.Context, in *QueryGetBalancesRequest, opts ...grpc.CallOption) (*QueryGetBalancesResponse, error) {
 	out := new(QueryGetBalancesResponse)
-	err := c.cc.Invoke(ctx, "/botany.botanydist.Query/Balances", in, out, opts...)
+	err := c.cc.Invoke(ctx, "/ununifi.ununifidist.Query/Balances", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -304,7 +304,7 @@ func _Query_Params_Handler(srv interface{}, ctx context.Context, dec func(interf
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/botany.botanydist.Query/Params",
+		FullMethod: "/ununifi.ununifidist.Query/Params",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(QueryServer).Params(ctx, req.(*QueryParamsRequest))
@@ -322,7 +322,7 @@ func _Query_Balances_Handler(srv interface{}, ctx context.Context, dec func(inte
 	}
 	info := &grpc.UnaryServerInfo{
 		Server:     srv,
-		FullMethod: "/botany.botanydist.Query/Balances",
+		FullMethod: "/ununifi.ununifidist.Query/Balances",
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(QueryServer).Balances(ctx, req.(*QueryGetBalancesRequest))
@@ -331,7 +331,7 @@ func _Query_Balances_Handler(srv interface{}, ctx context.Context, dec func(inte
 }
 
 var _Query_serviceDesc = grpc.ServiceDesc{
-	ServiceName: "botany.botanydist.Query",
+	ServiceName: "ununifi.ununifidist.Query",
 	HandlerType: (*QueryServer)(nil),
 	Methods: []grpc.MethodDesc{
 		{
@@ -344,7 +344,7 @@ var _Query_serviceDesc = grpc.ServiceDesc{
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
-	Metadata: "botanydist/query.proto",
+	Metadata: "ununifidist/query.proto",
 }
 
 func (m *QueryParamsRequest) Marshal() (dAtA []byte, err error) {
